Fixng css for reference tables to prevent overflows.
 interactive rebase in progress; onto 79eacdfbef
 Last commands done (192 commands done):
    pick f11534b916 software-defined asset -> asset definition in docs (#21487)
    pick 1905e1a903 Fixng css for reference tables to prevent overflows.
 Next command to do (1 remaining command):
    pick d3b232ec18 Temporarily removing work on Tabs component.
 You are currently rebasing branch 'docs/mdx-component-to-markdoc' on '79eacdfbef'.

 Changes to be committed:
	modified:   docs/next/styles/globals.css

--- a/docs/next/styles/globals.css
+++ b/docs/next/styles/globals.css
@@ -589,7 +589,6 @@ pre[class="noop"] {
     border-radius: 0 !important;
 }
 
-
 .n {
   font-weight: 700;
 }
@@ -605,22 +604,7 @@ pre[class="noop"] {
 dl, dl * {
   overflow-wrap: break-word;
 }
+
 td {
   word-break:break-word
-}
-
-.n {
-  font-weight: 700;
-}
-
-.prose strong {
-  font-weight: 700;
-}
-
-.prose p {
-  line-height: 1.75em;
-}
-
-dl, dl * {
-  overflow-wrap: break-word;
 }
